# ClassBuilder

./: .gitignore  CMakeLists.txt  README.md  build.gradle  settings.gradle  test.json
ClassBuilder/: CMakeLists.txt  ClassBuilder.cs  JsonClass.cs
ClassBuilder/CLI/: AbstractCommand.cs  CMakeLists.txt  CommandRegistry.cs
ClassBuilder/CLI/Commands/: CMakeLists.txt  ClassCommand.cs  ListCommand.cs  NewCommand.cs  OpenCommand.cs  SaveCommand.cs
ClassBuilder/ClassData/: CMakeLists.txt  NativeClass.cs
ClassBuilder/Data/: Project.cs  ProjectLoader.cs
ClassBuilder/Data/ClassData/: CMakeLists.txt  ClassField.cs  ProjectClass.cs
ClassBuilder/Generator/: AbstractGenerator.cs  CMakeLists.txt  CppGen.cs  ISourceGen.cs
ClassBuilder/Project/: CMakeLists.txt
ClassBuilder/Project/ClassData/: ClassField.cs  ProjectClass.cs
ClassBuilder/UI/: CMakeLists.txt  ClassManager.cs  HostWindow.ClassEditor.cs  HostWindow.cs
Ghidra/: DumpClass.java
SDK/: Actor.h  ClientInstance.h  Mob.h
src/io/github/disabledmallis/classbuilder/: Main.java
src/io/github/disabledmallis/classbuilder/builders/: CppSourceBuilder.java  ISourceBuilder.java
src/io/github/disabledmallis/classbuilder/generators/: CPlusPlusGenerator.java  ISourceGenerator.java
src/io/github/disabledmallis/classbuilder/ghidra/: DumpClass.java
src/io/github/disabledmallis/classbuilder/providers/: IFieldProvider.java  IFunctionProvider.java  IFunctionTypeProvider.java  IStructProvider.java  ISymbolProvider.java  ITypeProvider.java  ITypeTree.java  IVirtualFunctionProvider.java
(+17 files in other folders)
